--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 file filter=lfs diff=lfs merge=lfs -text
 *.apk filter=lfs diff=lfs merge=lfs -text
+Resources.zip filter=lfs diff=lfs merge=lfs -text
